# WhatHaveIDone

./: .gitignore  LEARNED.md  NOTES.md  README.md  config.yaml  install.sh  mcp_server.py  nomolo.py  pyproject.toml  requirements.txt  whid.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
agent/: __init__.py  enricher.py  metering.py  reviewer.py
collectors/: books.py  browser.py  calendar_collector.py  deep_scan.py  facebook_contacts.py  finance.py  gmail_collector.py  gmail_enricher.py  google_contacts.py  health.py  instagram_contacts.py  linkedin_contacts.py  local_mac.py  maps.py  music.py  notes.py  podcasts.py  shopping.py  slack.py  telegram.py  text_stream.py  whatsapp.py  youtube.py
completions/: nomolo.zsh  whid.zsh
core/: aliases.py  auth.py  cleaner.py  groomer.py  search_engine.py  vault.py  vectordb.py
docs/: ARCHITECTURE.md  CAPTAINS.md  CHARACTER_BOOK.md  GOOGLE_SETUP.md  MARKETING_STRATEGY.md  PITCH.md  THE_FLATCLOUD.md  THE_LEGEND_OF_NOMOLO.md  TROUBLESHOOTING.md
game-characters/: nomolo-character-gallery.html  nomolo-characters.json  nomolo-characters.md  preview-all-characters.html
tests/: mock_gmail.py  test_books.py  test_browser.py  test_calendar.py  test_cleaner.py  test_contacts.py  test_deep_scan.py  test_finance.py  test_full_pipeline.py  test_gmail_collector.py  test_gmail_enricher.py  test_groomer.py  test_health.py  test_integration.py  test_knowledge_builder.py  test_knowledge_engine.py  test_knowledge_forgetter.py  test_knowledge_graph_store.py  test_knowledge_integration.py  test_knowledge_resolver.py  test_knowledge_schema.py  test_knowledge_temporal.py  test_maps.py  test_mcp_graph_tools.py  test_music.py  test_nomolo_cli.py  test_notes.py  test_podcasts.py  test_query_accuracy.py  test_shopping.py  test_vector_correctness.py  (+4 more)
web/: rag.py  (+7 more)
(+36 files in other folders)
